snapshots/care/data4life/hc-util-sdk-kmp/error/1.12.0-SNAPSHOT/error-1.12.0-20220503.124322-1.pom.sha512
f3790deba42a92dceafb3582f1873a7d4076afb66a7e68bc40bc5b2bc9f63094ded93e83fc6692223ff5927753b743668c269825afa9d1e8fd86ef63b262ef34